[tool.poetry]
name = "qibocal"
version = "0.1.1"
description = "Qibo's quantum calibration, characterization and validation module."
authors = ["The Qibo team"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://qibo.science/"
repository = "https://github.com/qiboteam/qibocal/"
documentation = "https://qibo.science/qibocal/stable/"
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
qibolab = "^0.1.8"
qibo = "^0.2.12"
numpy = "^1.26.4"
scipy = "^1.10.1"
pandas = { version = "^2.2.2", extras = ["html"] }
pydantic = "^2.8.0"
click = "^8.1.3"
jinja2 = "^3.1.2"
plotly = "^5.22.0"
dash = "^2.6.0"
skops = "^0.10.0"
matplotlib = { version = "^3.7.0", optional = true }
seaborn = { version = "^0.12.2", optional = true }
pydot = { version = "^1.4.2", optional = true }
pyyaml = "^6.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pylint = "^2.17"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-env = "^0.8.1"
pytest-mock = "^3.14.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.0.0"
furo = "^2023.3.27"
sphinxcontrib-bibtex = "^2.4.1"
recommonmark = "^0.7.1"
sphinx_markdown_tables = "^0.0.17"
sphinx-copybutton = "^0.5.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
ipython = "^8.0"
devtools = "^0.10.0"

[tool.poetry.extras]

classify = ["matplotlib", "seaborn", "skl2onnx"]
viz = ["pydot"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qq = "qibocal:command"


[tool.poe.tasks]
test = "pytest"
lint = "pylint src/**/*.py -E"
lint-warnings = "pylint src/**/*.py --exit-zero"
docs = "make -C doc html"
docs-clean = "make -C doc clean"
test-docs = "make -C doc doctest"

[tool.pytest.ini_options]
testpaths = ['tests/']
addopts = ['--cov=qibocal', '--cov-report=xml', '--cov-report=html']

[tool.pylint.master]
# extensions not to check
extension-pkg-whitelist = ["numpy"]
jobs = 1

[tool.pylint.messages_control]
disable = ["invalid-name", "fixme"]
extension-pkg-whitelist = "pydantic"

[tool.pylint.reports]
# Available formats are:
# text, parseable, colorized, json and msvs (visual studio).
output-format = "colorized"

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 100

[tool.pylint.design]
# Maximum number of arguments for function / method
max-args = 10
