[tool.poetry]
name = "qibocal"
version = "0.2.4"
description = "Qibo's quantum calibration, characterization and validation module."
authors = ["The Qibo team"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://qibo.science/"
repository = "https://github.com/qiboteam/qibocal/"
documentation = "https://qibo.science/qibocal/stable/"
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]


[tool.poetry.dependencies]
python = ">=3.10,<3.14"
qibolab = "^0.2.8"
qibo = "^0.2.16"
numpy = ">=1.26.4,<3"
scipy = "^1.10.1"
pandas = { version = "^2.2.2", extras = ["html"] }
pydantic = "^2.8.0"
click = "^8.1.3"
jinja2 = "^3.1.2"
plotly = "^5.22.0"
skops = ">=0.11,<0.14"
cma = "^3.3.0"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-env = "^0.8.1"
pytest-mock = "^3.14.0"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
ruff = "^0.9.1"

[tool.ruff.lint.per-file-ignores]
"simple.py" = ["E402"]
"__init__.py" = ["F403"]
"calibration_scripts/**/*.py" = ["F821"]
"tests/calibration_scripts/**/*.py" = ["F821"]


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
furo = "^2023.3.27"
sphinxcontrib-bibtex = "^2.6.0"
recommonmark = "^0.7.1"
sphinx_markdown_tables = "^0.0.17"
sphinx-copybutton = "^0.5.1"
setuptools = ">=75.8,<79.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.0"
devtools = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
qq = "qibocal:command"


[tool.poe.tasks]
test = "pytest"
lint = "ruff check"
lint-warnings = """
  ruff check --exit-zero \
  --select F,E,W,C90,N,UP,BLE,FBT,B,A,C4,T10,EM,EXE,ISC,ICN,LOG,G,INP,PIE,T20,PT,Q,RSE,\
           RET,SLF,SLOT,SIM,TC,INT,ARG,PTH,ERA,NPY,PERF,RUF
"""
docs = "make -C doc html"
docs-clean = "make -C doc clean"
test-docs = "make -C doc doctest"
types = "true"

[tool.pytest.ini_options]
testpaths = ['tests/']
addopts = ['--cov=qibocal', '--cov-report=xml', '--cov-report=html']

[tool.pycln]
all = true
exclude = "__init__.py"
